[package]
name = "ubee-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
prometheus_exporter = "0.8.5"
reqwest = {version="0.11.20", features = ["blocking"]}
scraper = "0.17.1"
